--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 
+#broker configuration
+fluig.broker.host=${FLUIG_BROKER_HOST:localhost}
+fluig.broker.port=${FLUIG_BROKER_PORT:5672}
+fluig.broker.username=${FLUIG_BROKER_USERNAME:guest}
+fluig.broker.password=${FLUIG_BROKER_PASSWORD:guest}
+fluig.broker.virtual.host=/
+
 fluig.locksmith.app.code=LOQUESMI_TCHE
 fluig.locksmith.queue.name=LOQUESMI_TCHE-LOCKSMITH-REPLICATOR.V1
 fluig.locksmith.tags=masbah
